# fatcatbrain

./: .gitignore  README.md  pyproject.toml
benchmarks/: README.md
benchmarks/challenges/: core.jsonl
docs/adr/: 0001-deliberation-ontology.md
src/fatcat/: __init__.py  composition.py
src/fatcat/application/: __init__.py
src/fatcat/config/: __init__.py  settings.py
src/fatcat/domain/: __init__.py  deliberation.py  discourse.py  models.py  policies.py  value_objects.py
src/fatcat_benchmarks/: __init__.py  cli.py
src/fatcat_benchmarks/adapters/: __init__.py  jsonl_source.py  longmemeval_source.py
src/fatcat_benchmarks/application/: __init__.py  ports.py  runner.py
src/fatcat_benchmarks/domain/: __init__.py  models.py
src/fatcatbrain/: __init__.py  composition.py
src/fatcatbrain/adapters/: __init__.py
src/fatcatbrain/config/: settings.py
tests/: conftest.py  deterministic_llm.py
tests/adapters/: test_cli.py  test_codex_session_source.py  test_cursor_transcript_source.py  test_fake_llm_adapter.py  test_issue_persistence.py  test_mascot.py  test_ollama_adapter.py  test_persistence.py  test_prompts.py  test_render.py
tests/application/: fakes.py  test_capture_brain_dump.py  test_review_issue_candidate.py  test_review_memory_candidate.py  test_save_memory_item.py  test_session_lifecycle.py
tests/architecture/: test_english_ui.py  test_hexagonal_boundaries.py
tests/benchmark/: __init__.py  test_longmemeval_source.py  test_models.py  test_runner.py
tests/config/: test_settings.py
tests/domain/: test_deliberation.py  test_discourse.py  test_issue_models.py  test_models.py  test_policies.py
(+68 files in other folders)
